Refactor: Move bills scripts to feature-based structure and setup daily sync workflow
- Move nhanh_bills.py, daily_sync.py, transform_bills.py to src/features/nhanh/bills/
- Remove legacy files: transform_gold.py, transform_silver.py, orchestrator.py
- Remove duplicate loaders: bigquery_setup.py, gcs_loader.py (use shared versions)
- Update tests to use src.shared.gcs instead of src.loaders.gcs_loader
- Setup GitHub Actions workflow for daily bills sync at 1AM VN time
- Update documentation and README files

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,6 @@ COPY sql/ ./sql/
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
-# Default command
-CMD ["python", "src/main.py", "--entity", "all"]
+# Default command - can be overridden by Cloud Run Jobs with --args
+CMD ["python", "src/features/nhanh/bills/daily_sync.py"]
 
