--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,6 +55,58 @@ steps:
         fi
     id: 'deploy-cloud-run-job'
 
+  # Deploy Bills Transform Job (DEPRECATED: Use GitHub Actions workflow instead)
+  # Keeping for backward compatibility, but jobs should be managed via .github/workflows/deploy-jobs.yml
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: bash
+    args:
+      - '-c'
+      - |
+        echo "⚠️  DEPRECATED: This job deployment is deprecated."
+        echo "Please use GitHub Actions workflow (.github/workflows/deploy-jobs.yml) instead."
+        echo "Updating old job for backward compatibility..."
+        if gcloud run jobs describe nhanh-bills-transform-job --region=asia-southeast1 --project=$PROJECT_ID 2>/dev/null; then
+          gcloud run jobs update nhanh-bills-transform-job \
+            --image=gcr.io/$PROJECT_ID/nhanh-etl:$SHORT_SHA \
+            --region=asia-southeast1 \
+            --service-account=$PROJECT_ID@appspot.gserviceaccount.com \
+            --memory=2Gi \
+            --cpu=2 \
+            --max-retries=2 \
+            --task-timeout=1800 \
+            --set-env-vars=GCP_PROJECT=$PROJECT_ID,GCP_REGION=asia-southeast1,BRONZE_BUCKET=$PROJECT_ID,BRONZE_DATASET=bronze,TARGET_DATASET=nhanhVN,LOG_LEVEL=INFO \
+            --update-labels=project=etl-api-bigquery,feature=nhanh-bills,type=transform,environment=production,status=deprecated \
+            --command="python" \
+            --args="src/features/nhanh/bills/transform_trigger.py"
+        fi
+    id: 'deploy-bills-transform-job'
+
+  # Deploy OneOffice Daily Sync Job (DEPRECATED: Use GitHub Actions workflow instead)
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: bash
+    args:
+      - '-c'
+      - |
+        echo "⚠️  DEPRECATED: This job deployment is deprecated."
+        echo "Please use GitHub Actions workflow (.github/workflows/deploy-jobs.yml) instead."
+        echo "Updating old job for backward compatibility..."
+        if gcloud run jobs describe oneoffice-daily-sync-job --region=asia-southeast1 --project=$PROJECT_ID 2>/dev/null; then
+          gcloud run jobs update oneoffice-daily-sync-job \
+            --image=gcr.io/$PROJECT_ID/nhanh-etl:$SHORT_SHA \
+            --region=asia-southeast1 \
+            --service-account=$PROJECT_ID@appspot.gserviceaccount.com \
+            --memory=2Gi \
+            --cpu=2 \
+            --max-retries=2 \
+            --task-timeout=1800 \
+            --set-env-vars=GCP_PROJECT=$PROJECT_ID,GCP_REGION=asia-southeast1,BRONZE_DATASET=bronze,ONEOFFICE_BASE_URL=https://minham.1office.vn/api,LOG_LEVEL=INFO \
+            --set-secrets=ONEOFFICE_ACCESS_TOKEN=oneoffice-access-token:latest \
+            --update-labels=project=etl-api-bigquery,feature=oneoffice,type=sync,environment=production,status=deprecated \
+            --command="python" \
+            --args="src/features/one_office/daily_sync.py"
+        fi
+    id: 'deploy-oneoffice-job'
+
 options:
   machineType: 'E2_HIGHCPU_8'
   logging: CLOUD_LOGGING_ONLY
