--- a/.github/workflows/deploy-jobs.yml
+++ b/.github/workflows/deploy-jobs.yml
@@ -14,7 +14,7 @@ on:
       deploy_all:
         description: 'Deploy all jobs (ignore changed detection)'
         required: false
-        default: 'false'
+        default: false
         type: boolean
 
 env:
@@ -41,6 +41,9 @@ jobs:
             echo "jobs=all" >> $GITHUB_OUTPUT
             exit 0
           fi
+
+          # Trust all directories to avoid git 128 errors
+          git config --global --add safe.directory '*'
 
           # Get previous commit SHA, fallback to HEAD if only one commit exists
           PREV_SHA="HEAD~1"
@@ -111,6 +114,9 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
+      - name: Configure Docker
+        run: gcloud auth configure-docker gcr.io --quiet
+
       - name: Build and push Docker image
         run: |
           # Use GitHub SHA for reliable image tagging
@@ -118,10 +124,14 @@ jobs:
           IMAGE_NAME="gcr.io/${{ env.PROJECT_ID }}/nhanh-etl"
           
           echo "Building Docker image with SHA: ${SHORT_SHA}..."
-          gcloud builds submit \
-            --tag ${IMAGE_NAME}:${SHORT_SHA} \
-            --tag ${IMAGE_NAME}:latest \
-            --project=${{ env.PROJECT_ID }}
+          docker build \
+            -f docker/Dockerfile \
+            -t ${IMAGE_NAME}:${SHORT_SHA} \
+            -t ${IMAGE_NAME}:latest \
+            .
+            
+          docker push ${IMAGE_NAME}:${SHORT_SHA}
+          docker push ${IMAGE_NAME}:latest
           
           echo "IMAGE_SHA=${SHORT_SHA}" >> $GITHUB_ENV
           echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
