--- a/.github/workflows/deploy-jobs.yml
+++ b/.github/workflows/deploy-jobs.yml
@@ -31,11 +31,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0  # Fetch full history for reliable git diff
 
       - name: Detect changed jobs
         id: changes
         run: |
+          # Handle manual trigger with deploy_all flag
           if [ "${{ github.event.inputs.deploy_all }}" == "true" ]; then
             echo "Deploying all jobs (manual trigger with deploy_all=true)"
             echo "jobs=all" >> $GITHUB_OUTPUT
@@ -44,6 +45,14 @@ jobs:
 
           # Trust all directories to avoid git 128 errors
           git config --global --add safe.directory '*'
+
+          # For manual workflow_dispatch triggers, default to deploying all jobs
+          # since we can't reliably detect changes without a push event
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "Manual trigger detected, deploying all jobs"
+            echo "jobs=all" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
           # Get previous commit SHA, fallback to HEAD if only one commit exists
           PREV_SHA="HEAD~1"
