--- a/.github/workflows/deploy-jobs.yml
+++ b/.github/workflows/deploy-jobs.yml
@@ -217,28 +217,5 @@ jobs:
         run: |
           PROJECT_ID="${{ env.PROJECT_ID }}"
           REGION="${{ env.REGION }}"
-          JOB_NAME="webview-messenger-reader-messcard-daily"
-          SCHEDULER_NAME="webview-messenger-reader-messcard-schedule"
-          CRON="5 16 * * *" # 16:05 GMT+7
-          TIMEZONE="Asia/Ho_Chi_Minh"
-          SERVICE_ACCOUNT="${PROJECT_ID}@appspot.gserviceaccount.com"
-          JOB_API_URL="https://${REGION}-run.googleapis.com/apis/run.googleapis.com/v1/namespaces/${PROJECT_ID}/jobs/${JOB_NAME}:run"
-
-          echo "Ensuring Cloud Scheduler job: ${SCHEDULER_NAME}"
-          gcloud scheduler jobs describe "${SCHEDULER_NAME}" \
-            --location "${REGION}" \
-            --project "${PROJECT_ID}" >/dev/null 2>&1 && \
-            gcloud scheduler jobs delete "${SCHEDULER_NAME}" \
-              --location "${REGION}" \
-              --project "${PROJECT_ID}" \
-              --quiet || true
-
-          gcloud scheduler jobs create http "${SCHEDULER_NAME}" \
-            --location "${REGION}" \
-            --schedule "${CRON}" \
-            --uri "${JOB_API_URL}" \
-            --http-method POST \
-            --oauth-service-account-email "${SERVICE_ACCOUNT}" \
-            --time-zone "${TIMEZONE}" \
-            --project "${PROJECT_ID}"
+          python .github/scripts/setup_messcard_scheduler.py
 
